--- a/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
@@ -179,9 +179,10 @@
                                             && aplicanteData.pedidoLicencaAtividade.fatura.recibo
                                             ){
                                             <p-tag [value]="'SUBMETIDO'" [severity]="'success'" />
-                                            <p-button (click)="downloadFile(aplicanteData.pedidoLicencaAtividade.fatura.recibo)" icon="pi pi-download"
-                                                label="Decarregar Recibo" [raised]="true" [loading]="downloadLoading"
-                                                severity="info" />
+                                            <p-button
+                                                (click)="downloadFile(aplicanteData.pedidoLicencaAtividade.fatura.recibo)"
+                                                icon="pi pi-download" label="Decarregar Recibo" [raised]="true"
+                                                [loading]="downloadLoading" severity="info" />
                                             }@else {
                                             <p-tag value="Não Submetida" [severity]="'secondary'" icon="pi pi-ban" />
                                             }
@@ -211,9 +212,9 @@
                                             </div>
                                         </div>
                                         <div class="flex items-center space-x-4">
-                                            @if (aplicanteData.pedidoInscricaoCadastro) {
-                                            <p-tag [value]="aplicanteData.pedidoInscricaoCadastro.status"
-                                                [severity]="aplicanteData.pedidoInscricaoCadastro.status| statusSeverity" />
+                                            @if (pedidoVistoria) {
+                                            <p-tag [value]="pedidoVistoria.status"
+                                                [severity]="pedidoVistoria.status| statusSeverity" />
                                             <p-button [routerLink]="['pedido-inscricao']" icon="pi pi-eye"
                                                 label="Pré-visualização" [raised]="true" severity="info" />
                                             }
@@ -388,7 +389,9 @@
             <!-- Pedido de Vistoria -->
             <p-step-panel [value]="4">
                 <ng-template #content let-activateCallback="activateCallback">
-                    <app-pedido-vistoria-form></app-pedido-vistoria-form>
+                    <app-pedido-vistoria-form [aplicanteData]="aplicanteData" [listaAldeia]="listaAldeia"
+                        [listaGrupoAtividade]="listaGrupoAtividade" (dataSent)="onDataReceived($event)">
+                    </app-pedido-vistoria-form>
                     <div class="flex pt-6 justify-between">
                         <p-button label="Back" severity="secondary" icon="pi pi-arrow-left"
                             (onClick)="activateCallback(3)" />
