Save and Update Fatura for Pedido Vistoria

--- a/src/app/pages/application-management/fatura/fatura.component.html
+++ b/src/app/pages/application-management/fatura/fatura.component.html
@@ -1,3 +1,4 @@
+@if (fatura) {
 <div class="card">
     <div class="grid grid-cols-12 mb-4">
         <div class="col-span-6">
@@ -258,3 +259,4 @@
         </div>
     </div>
 </div>
+}
