--- a/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
@@ -243,11 +243,11 @@
                                             </div>
                                         </div>
                                         <div class="flex items-center space-x-4">
-                                            @if (aplicanteData.pedidoInscricaoCadastro &&
-                                            aplicanteData.pedidoInscricaoCadastro.fatura) {
-                                            <p-tag [value]="aplicanteData.pedidoInscricaoCadastro.fatura.status"
-                                                [severity]="aplicanteData.pedidoInscricaoCadastro.fatura.status| statusSeverity" />
-                                            <p-button [routerLink]="['fatura-inscricao']" icon="pi pi-eye"
+                                            @if (pedidoVistoria &&
+                                            pedidoVistoria.fatura) {
+                                            <p-tag [value]="pedidoVistoria.fatura.status"
+                                                [severity]="pedidoVistoria.fatura.status| statusSeverity" />
+                                            <p-button [routerLink]="['fatura-vistoria']" icon="pi pi-eye"
                                                 label="Pré-visualização" [raised]="true" severity="info" />
                                             }@else {
                                             <p-tag value="Não Emitida" [severity]="'secondary'" icon="pi pi-ban" />
@@ -275,9 +275,9 @@
                                             </div>
                                         </div>
                                         <div class="flex items-center space-x-4">
-                                            @if (aplicanteData.pedidoInscricaoCadastro
-                                            && aplicanteData.pedidoInscricaoCadastro.fatura
-                                            && aplicanteData.pedidoInscricaoCadastro.fatura.recibo
+                                            @if (pedidoVistoria
+                                            && pedidoVistoria.fatura
+                                            && pedidoVistoria.fatura.recibo
                                             ){
                                             <p-tag [value]="'SUBMETIDO'" [severity]="'success'" />
                                             <p-button (click)="downloadFile(uploadedFiles[0])" icon="pi pi-download"
@@ -404,7 +404,8 @@
             <!-- Fatura Pedido de Licenca -->
             <p-step-panel [value]="5">
                 <ng-template #content let-activateCallback="activateCallback">
-                    <app-fatura-vistoria-form [listaPedidoAto]="listaPedidoAto"></app-fatura-vistoria-form>
+                    <app-fatura-vistoria-form [aplicanteData]="aplicanteData" [listaPedidoAto]="listaPedidoAto">
+                    </app-fatura-vistoria-form>
                     <div class="flex pt-6 justify-between">
                         <p-button label="Back" severity="secondary" icon="pi pi-arrow-left" iconPos="right"
                             (onClick)="activateCallback(4)" />
